--- a/ShipRent/bin/main/application.properties
+++ b/ShipRent/bin/main/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ShipRent
+spring.datasource.url=jdbc:postgresql://localhost:5433/ShipRent
 spring.datasource.username=postgres
-spring.datasource.password=ufabc
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=public
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
