--- a/ShipRent/src/main/resources/application.properties
+++ b/ShipRent/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ShipRent
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=public
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
